// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceInfo renders with acronyms 1`] = `
<DocumentFragment>
  <span>
    <a
      data-test-id="literature-conference-link"
      href="/conferences/1639582"
    >
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              MG15
            </span>
             and 
          </li>
          <li>
            <span>
              SAP16
            </span>
          </li>
        </ul>
      </div>
    </a>
  </span>
</DocumentFragment>
`;

exports[`ConferenceInfo renders with acronyms and start and end page 1`] = `
<DocumentFragment>
  <span>
    <a
      data-test-id="literature-conference-link"
      href="/conferences/1639582"
    >
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              MG15
            </span>
          </li>
        </ul>
      </div>
    </a>
    <span>
      , 1-20
    </span>
  </span>
</DocumentFragment>
`;

exports[`ConferenceInfo renders with only page end 1`] = `
<DocumentFragment>
  <span>
    <a
      data-test-id="literature-conference-link"
      href="/conferences/1639582"
    >
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              MG15
            </span>
          </li>
        </ul>
      </div>
    </a>
  </span>
</DocumentFragment>
`;

exports[`ConferenceInfo renders with only page start 1`] = `
<DocumentFragment>
  <span>
    <a
      data-test-id="literature-conference-link"
      href="/conferences/1639582"
    >
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              MG15
            </span>
          </li>
        </ul>
      </div>
    </a>
    <span>
      , 1
    </span>
  </span>
</DocumentFragment>
`;

exports[`ConferenceInfo renders without acronyms present 1`] = `
<DocumentFragment>
  <span>
    <a
      data-test-id="literature-conference-link"
      href="/conferences/1639582"
    >
      15th Marcel Grossmann Meeting on Recent Developments in Theoretical and Experimental General Relativity, Astrophysics, and Relativistic Field Theories
    </a>
  </span>
</DocumentFragment>
`;
